--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 body {
-  margin: 0;
+  margin: 0 auto;
   max-width: 1400px;
   background-color: #444444;
 }
 main {
   padding: 5px 50px;
+  margin: 15px;
 }
 /* Navigation bar */
 
@@ -46,6 +47,8 @@ div.gallery {
   float: left;
   width: 180px;
   margin: 0 auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
   background-color: white;
 }
 
@@ -59,48 +62,108 @@ div.desc {
   padding: 15px;
   margin: 0 auto;
   text-align: center;
-  /* background-color: white; */
+  background-color: white;
 }
 
-section {
+div#highlight {
+  width: 1090px;
+  height: 300px;
+  overflow: hidden;
+  padding: 15px;
+  background-color: #444444;
+  margin: 0 auto;
+  position: relative;
+}
+
+/* section {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-}
+} */
 
 /* Responsive */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+/* .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+} */
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
+  .column {
+    flex: 40%;
+    max-width: 40%;
+  }
+  #highlight {
+    visibility: hidden;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+  #highlight {
+    visibility: hidden;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+}
 
 /* Media Query for Mobile Devices */
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   div.gallery {
     width: 80%;
   }
-}
+} */
 
 /* Media Query for low resolution  Tablets, Ipads */
-@media (min-width: 481px) and (max-width: 767px) {
+/* @media (min-width: 481px) and (max-width: 767px) {
   div.gallery {
     width: 80%;
   }
-}
+} */
 
 /* Media Query for Tablets Ipads portrait mode */
-@media (min-width: 768px) and (max-width: 1024px) {
+/* @media (min-width: 768px) and (max-width: 1024px) {
   div.gallery {
     width: 40%;
   }
-}
+} */
 
 /* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {
+/* @media (min-width: 1025px) and (max-width: 1280px) {
   div.gallery {
     width: 24%;
   }
-}
+} */
 
 /* Media Query for Large screens */
-@media (min-width: 1281px) {
+/* @media (min-width: 1281px) {
   div.gallery {
     width: 10%;
   }
-}
+} */
