--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,12 @@ main {
   padding: 5px 50px;
   margin: 15px;
 }
-/* Navigation bar */
 
-ul.topnav {
+/* Navigation bar */
+.navbar {
+  background-color: #000000;
+}
+/* ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -39,13 +42,12 @@ ul.topnav li a.active {
 
 ul.topnav li.left {
   float: left;
-}
+} */
 
-/* Movie Cards */
+/* Main Content */
 div.gallery {
-  /* border: 1px solid #ccc; */
   float: left;
-  width: 180px;
+  width: 250px;
   margin: 0 auto;
   margin-bottom: 10px;
   margin-top: 10px;
@@ -59,77 +61,65 @@ div.gallery img {
 }
 
 div.desc {
-  padding: 15px;
+  padding: 5px;
   margin: 0 auto;
-  text-align: center;
   background-color: white;
+  color: #b0a9d8;
+}
+
+h2 {
+  color: #030303;
 }
 
 div#highlight {
-  width: 1090px;
-  height: 300px;
-  overflow: hidden;
-  padding: 15px;
+  width: 100%;
+  padding: 28px;
   background-color: #444444;
   margin: 0 auto;
-  position: relative;
+  flex: 100%;
+  max-width: 100%;
+  flex-shrink: 3;
+  /* margin-bottom: 10px; */
+  margin-top: 25px;
 }
 
-/* section {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
-} */
-
-/* Responsive */
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 0 15px;
 }
 
-/* Create four equal columns that sits next to each other */
-/* .column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
+button.see-more {
+  height: 30px;
+  width: 100px;
+  border-radius: 12px;
+  background-color: #76baf8;
+  color: white;
+  text-decoration: none;
+  border: none;
+  margin: 3px;
 }
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
-} */
 
 /* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1200px) {
   .column {
-    flex: 40%;
-    max-width: 40%;
+    flex: 43%;
+    max-width: 43%;
   }
-  #highlight {
-    visibility: hidden;
-    clear: both;
-    float: left;
-    margin: 10px auto 5px 20px;
-    width: 28%;
-    display: none;
+  div#highlight {
+    width: 100%;
+    flex: 100%;
   }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   .column {
-    flex: 100%;
-    max-width: 100%;
+    flex: 85%;
+    max-width: 85%;
   }
   #highlight {
-    visibility: hidden;
-    clear: both;
-    float: left;
-    margin: 10px auto 5px 20px;
-    width: 28%;
-    display: none;
+    flex-grow: 1;
   }
 }
 
