--- a/css/styles.css
+++ b/css/styles.css
@@ -12,37 +12,6 @@ main {
 .navbar {
   background-color: #000000;
 }
-/* ul.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #000000;
-}
-
-ul.topnav li {
-  float: right;
-}
-
-ul.topnav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul.topnav li a:hover:not(.active) {
-  background-color: #111;
-}
-
-ul.topnav li a.active {
-  background-color: #76baf8;
-}
-
-ul.topnav li.left {
-  float: left;
-} */
 
 /* Main Content */
 div.gallery {
@@ -79,7 +48,6 @@ div#highlight {
   flex: 100%;
   max-width: 100%;
   flex-shrink: 3;
-  /* margin-bottom: 10px; */
   margin-top: 25px;
 }
 
@@ -100,7 +68,7 @@ button.see-more {
   margin: 3px;
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
+/* Responsive layout*/
 @media screen and (max-width: 1200px) {
   .column {
     flex: 43%;
@@ -112,7 +80,6 @@ button.see-more {
   }
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 480px) {
   .column {
     flex: 85%;
@@ -122,38 +89,3 @@ button.see-more {
     flex-grow: 1;
   }
 }
-
-/* Media Query for Mobile Devices */
-/* @media (max-width: 480px) {
-  div.gallery {
-    width: 80%;
-  }
-} */
-
-/* Media Query for low resolution  Tablets, Ipads */
-/* @media (min-width: 481px) and (max-width: 767px) {
-  div.gallery {
-    width: 80%;
-  }
-} */
-
-/* Media Query for Tablets Ipads portrait mode */
-/* @media (min-width: 768px) and (max-width: 1024px) {
-  div.gallery {
-    width: 40%;
-  }
-} */
-
-/* Media Query for Laptops and Desktops */
-/* @media (min-width: 1025px) and (max-width: 1280px) {
-  div.gallery {
-    width: 24%;
-  }
-} */
-
-/* Media Query for Large screens */
-/* @media (min-width: 1281px) {
-  div.gallery {
-    width: 10%;
-  }
-} */
