--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0 auto;
   max-width: 1400px;
   background-color: #444444;
+  font-family: "Roboto", sans-serif;
 }
 main {
   padding: 5px 50px;
@@ -42,7 +43,7 @@ h2 {
 
 div#highlight {
   width: 100%;
-  padding: 28px;
+  padding: 15px;
   background-color: #444444;
   margin: 0 auto;
   flex: 100%;
